--- a/docs/_sass/jekyll-theme-slate.scss
+++ b/docs/_sass/jekyll-theme-slate.scss
@@ -63,13 +63,12 @@ h1, h2, h3, h4, h5, h6 {
   color:#0090ff;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   /*font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;*/
-  letter-spacing: -1px;
 }
 
 h1 {
   font-size: 36px;
   font-weight: 700;
-  font-family: 'Architects Daughter';
+  letter-spacing: -1px;
 }
 
 h2 {
@@ -96,6 +95,10 @@ h6 {
 
 p {
   margin: 10px 0 15px 0;
+}
+
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
+  letter-spacing: 3px;
 }
 
 footer p {
