--- a/docs/_sass/jekyll-theme-slate.scss
+++ b/docs/_sass/jekyll-theme-slate.scss
@@ -332,6 +332,7 @@ Full-Width Styles
   text-shadow: inherit;
 }
 
+/*
 #project_tagline a:link, #project_tagline a:visited {
   text-decoration: underline #7cc6ff;
 }
@@ -339,6 +340,7 @@ Full-Width Styles
 #project_tagline a:hover, #project_tagline a:active {
   text-decoration: underline #fffffb;
 }
+*/
 
 #downloads {
   position: absolute;
