--- a/docs/_sass/jekyll-theme-slate.scss
+++ b/docs/_sass/jekyll-theme-slate.scss
@@ -314,6 +314,7 @@ Full-Width Styles
   font-size: 42px;
   font-weight: 700;
   text-shadow: #111 0px 0px 10px;
+  letter-spacing: 1px;
 }
 
 #project_tagline {
