--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,6 +8,7 @@
     <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://sudachen.github.io/assets/theme.css">
 
     <title>{{ site.title | default: site.github.repository_name }}</title>
   </head>
